base/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: trust-mtls
  namespace: trust
spec:
  mtls:
    mode: STRICT
