base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trust
  namespace: trust
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.platform.svc.cluster.local/oauth2/auth"
spec:
  ingressClassName: traefik
  rules:
    - host: trust.arca.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trust
                port:
                  number: 80
